<resources>
    <string name="app_name">Covid 19 -health tracking</string>
    <string name="title_home">Home</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="patient_name">Rosa Rodríguez García</string>
    <string name="address_1">Calle 53 Este, Estafeta ElDorado</string>
    <string name="address_2">Panamá, Panamá</string>
    <string name="phone">+507 600–5670</string>
    <string name="title_gender">Genero | Edad | Estatura</string>
    <string name="gender_content">Femenino | 65 años | 176 cm</string>
    <string name="pathological_history">Antecedentes personales patológicos | Medicamentos</string>
    <string name="pathological_history_content">"Asma bronquial | Budesonida (Pulmicort Flexhaler) Cardiopatía | Captopril "</string>
    <string name="has_problems_for">"Tiene problemas para "</string>
    <string name="has_problems_for_content" >"Ver, valerse por si mismo"</string>
    <string name="last_diagnosis_title">Último diagnóstico</string>
    <string name="patient_status_title">Estado</string>
    <string name="status_content">Supervición médica a distancia, cuarentena obligatoria</string>
    <string name="disease_under_observation">Enfermedad en observación</string>
    <string name="disease_under_observation_content">Infección por CoV-SARS2 (COVID-19)</string>
    <string name="treatment_title">Tratamiento de la enfermedad en observación</string>
    <string name="treatment_content_1">Medicamento: Hidroxicloroquina (comp 200 mg) 400 mg</string>
    <string name="treatment_content_2">"Dosis: 400 mg cada 12 horas el primer día y después 200 mg cada 12 horas"</string>
    <string name="treatment_content_3">Periodo del tratamiento: 27 de marzo al 3 de abril, 7 días</string>
    <string name="hour_alarm_content">2:00 P.M.</string>
    <string name="alarm_patient_name">¡Hola!</string>
    <string name="alarm_notice">es momento de hacer su chequeo virtual,  es importante que conteste con honestidad para prestarle la ayuda necesaria. La información recolectada es totalmente confidencial.</string>
    <string name="button_start">Empezar</string>
    <string name="button_end">Finalizar</string>
    <string name="privacy_notice_title">Aviso de Privacidad</string>
    <string name="yes">Si</string>
    <string name="not">No</string>
    <string name="check_1_q_1_a_1">mejor</string>
    <string name="check_1_q_1_a_2">igual, no he mejorado</string>
    <string name="check_1_q_1_a_3">peor</string>
    <string name="check_1_q_1">*¿Cómo se siente?</string>
    <string name="check_1_q_2">¿Cuáles son sus molestias?</string>
    <string name="check_1_q_2_a_1">malestar general</string>
    <string name="check_1_q_2_a_2">picazón o dolor de garganta</string>
    <string name="check_1_q_2_a_3">diarrea</string>
    <string name="check_1_q_2_a_4">mal sabor en la boca</string>
    <string name="check_1_q_2_a_5">pérdida de sabor en los alimentos</string>
    <string name="check_1_q_2_a_6">pérdida del olfato</string>
    <string name="check_1_q_2_a_7">dolores músculares</string>
    <string name="check_1_q_2_a_8">dolor en torax o espalda</string>
    <string name="check_1_q_2_a_9">dolor de cabeza</string>
    <string name="check_1_q_2_a_10">tos humeda con flemas</string>
    <string name="check_1_q_2_a_11">tos seca</string>
    <string name="check_1_q_2_a_12">escalofrío</string>
    <string name="check_1_q_2_a_13">fiebre</string>
    <string name="check_1_q_2_a_14">fatiga al caminar o subir escaleras</string>
    <string name="check_1_q_2_a_15">falta de aire con actividades cotidianas</string>
    <string name="check_1_q_2_a_16">sensación de esfuerzo para respirar</string>
    <string name="check_1_q_2_a_17">dificultad respiratoria</string>
    <string name="check_1_q_2_a_18">confusión o dificultad para despertar</string>
    <string name="check_1_q_2_a_19">tono azulado en los labios o el rostro</string>
    <string name="next_title">Siguiente</string>
    <string name="check_1_q_3">Escriba otros síntomas o molestias</string>
    <string name="check_2_q_1">¿Cuál es su temperatura corporal en grados celsius (ºC)?</string>
    <string name="check_2_q_1_a_1">menor que 37.5º</string>
    <string name="check_2_q_1_a_2">entre 37.5º y 37.9º</string>
    <string name="check_2_q_1_a_3">entre 38º y 39º</string>
    <string name="check_2_q_1_a_4">mayor que 39º</string>
    <string name="check_2_q_2">"*¿Cuántas respiraciones por minuto, tiene en este momento"</string>
    <string name="check_2_q_2_a_1">menor que 14</string>
    <string name="check_2_q_2_a_2">entre 14 y 20</string>
    <string name="check_2_q_2_a_3">entre 21 y 28</string>
    <string name="check_2_q_2_a_4">mayor que 28</string>
    <string name="check_2_q_3">¿En cuanto está su presión arterial en éste momento?</string>
    <string name="check_2_q_3_a_1">valor mayor</string>
    <string name="check_2_q_3_a_2">valor menor</string>
    <string name="check_3_q_1">En las últimas 2 semanas, ¿Que tan frecuente le ha pasado lo siguiente?</string>
    <string name="check_3_q_1_a_1">¿Ha estado nervioso o ansioso?</string>
    <string name="check_3_q_1_a_2">¿No ha podido dejar de estár preocupado?</string>
    <string name="check_3_q_1_a_3">¿Se ha preocupado demasiado por cosas diferentes?</string>
    <string name="check_3_q_1_a_4">¿Ha tenido dificultad para relajarse?</string>
    <string name="check_3_q_1_a_5">¿Ha estado tan inquieto, que es difícil quedarse quieto?</string>
    <string name="check_3_q_1_a_6">¿Se ha puesto facilmente molesto o irritable?</string>
    <string name="check_3_q_1_a_7">¿Ha sentido miedo, como si algo horrible fuera a pasar?</string>
    <string name="check_3_q_1_a_01">No</string>
    <string name="check_3_q_1_a_02">Algúnos días</string>
    <string name="check_3_q_1_a_03">Más de la mitad de los días</string>
    <string name="check_3_q_1_a_04">Casí todos los días</string>
    <string name="check_3_q_2">¿Está tomando sus medicamentos?</string>
    <string name="check_3_q_2_a_1">lo he olvidado algúnas veces</string>
    <string name="check_3_q_2_a_2">he terminado el tratamiento</string>
    <string name="check_4_q_1">Se honesto en las siguientes preguntas:</string>
    <string name="check_4_q_2_a_1">En las últimas semanas, ¿ha deseado estar muerto?</string>
    <string name="check_4_q_2_a_2">En las últimas semanas, ¿ha sentido que usted o su familia estarían mejor si estuviera muerto?</string>
    <string name="check_4_q_2_a_3">En la última semana, ¿ha estado pensando en suicidarse?</string>
    <string name="check_4_q_2_a_4">¿Alguna vez ha intentado suicidarse?</string>
    <string name="check_4_q_2_a_5">¿Está pensando en suicidarse en este momento?</string>
    <string name="auth_phone_title">Digite su número de celular</string>
    <string name="auth_send_phone_code">Envíar Código</string>
    <string name="auth_phone_hint">###-####</string>
    <string name="auth_invalid_credentials_provided">El número de celular o contraseña son incorrectos. Compruebe nuevamente.</string>
    <string name="auth_incomplete_fields">Debe llenar todos los campos</string>
    <string name="auth_no_password_provided">Debe escribir una contraseña</string>
    <string name="auth_password_has_wrong_format">La contraseña tiene el formato incorrecto</string>
    <string name="auth_user_not_found">Usuario no encontrado. Compruebe el número celular.</string>
    <string name="auth_client_exception">Compruebe su conexión a Internet e intente nuevamente.</string>
    <string name="auth_service_generic_exception">Ha ocurrido un error, por favor intente nuevamente.</string>
    <string name="temporal_password_hint">Digite su contraseña</string>
    <string name="text_title_new_pass">Digite su nueva contraseña</string>
    <string name="new_password_hint">debe contener mínimo una mayúscula, una minúscula, un número, y ser de mínimo 8 caracteres.</string>
    <string name="check_result_low_title">BAJO RIESGO</string>
    <string name="check_result_score">0.999999</string>
    <string name="check_result_moderated_title">MODERADO RIESGO</string>
    <string name="check_result_high_title">ALTO RIESGO</string>
    <string name="check_result_low_notice">Según las respuestas dadas, usted está en bajo riesgo. Siga las instrucciones dadas por su médico. Si cree que tiene una emergencia llame inmediatamente al 911.</string>
    <string name="check_result_moderated_notice">Según las respuestas dadas, usted está en moderado riesgo. Será puesto en cola para atención prioritaria, un médico le llamará en el transcurso de unos minutos. Si cree que tiene una emergencia llame inmediatamente al 911.</string>
    <string name="check_result_high_notice">Usted está en algo riesgo, llame inmediatamente a su médico o al 911.</string>
    <string name="check_result_disc">Editar y volver a evaluar</string>
    <string name="timer">Reloj</string>
    <string name="card_summary_risk">0.967705 / Moderado Riesgo</string>
    <string name="card_feel">Se siente mejor.</string>
    <string name="card_symptom">malestar general | dolores musculares | perdida de sabor en los alimentos | picazón o dolor de garganta</string>
    <string name="card_vital_signs">"T: 38º – 39º	|	R: 21 – 28"</string>
    <string name="card_feel_pro">"Se siente "</string>
    <string name="card_vital_signs_T_1">"menor que 37.5º"</string>
    <string name="card_vital_signs_T_2">37.5º - 37.9º</string>
    <string name="card_vital_signs_T_3">38º - 39º</string>
    <string name="card_vital_signs_T_4">mayor que 39º</string>
    <string name="card_vital_signs_R_1">menor que 14</string>
    <string name="card_vital_signs_R_2">"14 – 20"</string>
    <string name="card_vital_signs_R_3">"21 – 28"</string>
    <string name="card_vital_signs_R_4">mayor que 28</string>
</resources>
