<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_check_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientCheckActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fragment_margin"
        android:background="@color/colorBackgroundLight"
        android:padding="@dimen/fragment_padding_extended">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_1_q_1"
                    android:textAppearance="@style/TextAppearance.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/howYouFeel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionGroup="true">

                    <RadioButton
                        android:id="@+id/howYouFeel_better"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_1_a_1"
                        android:textAppearance="@style/TextAppearance.Small" />

                    <RadioButton
                        android:id="@+id/howYouFeel_no_better"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_1_a_2"
                        android:textAppearance="@style/TextAppearance.Small" />

                    <RadioButton
                        android:id="@+id/howYouFeel_worse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_1_a_3"
                        android:textAppearance="@style/TextAppearance.Small" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_1_q_2"
                    android:textAppearance="@style/TextAppearance.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    style="@style/TextAppearance.Medium"
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:chipSpacing="5dp">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_1"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_2"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_3"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_4"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_5"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_6"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_7"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_8"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_9"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_10"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_11"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_12"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_13"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_14"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_15"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_16"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_17"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_answer_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_1_q_2_a_18"
                        app:checkedIconEnabled="true"
                        app:chipIcon="@drawable/ic_done_black_24dp" />

                </com.google.android.material.chip.ChipGroup>
            </TableRow >
            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editText_other_symptom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="1000"
                    android:hint="@string/check_1_q_3"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    tools:layout_editor_absoluteX="51dp"
                    tools:layout_editor_absoluteY="747dp" />
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/button_next_check_1"
            style="@style/TextAppearance.BlueButtonSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_txt_margin_section"
            android:layout_marginBottom="@dimen/activity_txt_margin_section"
            android:text="@string/next_title"
            android:textAppearance="@style/TextAppearance.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>