<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_summary_check"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CheckSummaryCardView"
    android:backgroundTint="@color/colorBackgroundOrangeAlert">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="6dp"
        android:padding="12dp"
        android:background="@color/colorBackgroundLight">
       <LinearLayout
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/activity_txt_margin_section"
           android:weightSum="1">
           <TextView
               android:id="@+id/txtRisk"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="start|center_vertical"
               android:text="@string/card_summary_risk"
               android:textAppearance="@style/TextAppearance.Medium"
               />
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_marginStart="@dimen/activity_txt_margin_paragraph"
               android:layout_weight="1"
               android:layout_gravity="start|center_vertical"
               android:src="@drawable/ic_watch_later_black_18dp">
           </ImageView>
           <TextView
               android:id="@+id/textTime"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/activity_txt_margin_paragraph"
               android:layout_weight="1"
               android:layout_gravity="end|center_vertical"
               android:gravity="end"
               android:text="@string/hour_alarm_content"
               android:textAppearance="@style/TextAppearance.Medium"
               />
       </LinearLayout>
        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_txt_margin_section"
            android:text="@string/patient_name"
            android:textAppearance="@style/TextAppearance.Medium"
            />
        <TextView
            android:id="@+id/txtFeel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_txt_margin_title_1"
            android:layout_marginEnd="8dp"
            android:text="@string/card_feel"
            />
        <TextView
            android:id="@+id/txtSymptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_txt_margin_paragraph"
            android:layout_marginEnd="8dp"
            android:text="@string/card_symptom"
            />
        <TextView
            android:id="@+id/txtVitalSigns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_txt_margin_title_1"
            android:text="@string/card_vital_signs" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
